Add editorconfig plugin
The editorconfig plugin allows us to create a .editorconfig
file in a folder and vim will follow the formatting instructions
left in that file. (tab size, file type, line endings etc.)

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vimfiles/bundle/puppet-syntax-vim"]
 	path = vimfiles/bundle/puppet-syntax-vim
 	url = https://github.com/puppetlabs/puppet-syntax-vim.git
+[submodule "vimfiles/bundle/vim-editorconfig"]
+	path = vimfiles/bundle/vim-editorconfig
+	url = https://github.com/editorconfig/editorconfig-vim.git
